<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_location">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_completed"
            android:text="1/3 Complete"
            android:layout_gravity="center"
            android:textColor="#E74C3C"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bus"
            android:layout_marginBottom="20dp"
            android:layout_width="300dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/customize_progressbar"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/addBus">

                <TextView
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_bus" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editBus"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/hint_name_bus"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:minEms="7"
                    style="@style/EditTextCustomHolo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/addDes"
                android:layout_marginBottom="16dp">

                <TextView
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_destination" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editDes"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:hint="@string/hint_name_des"
                    android:minEms="7"
                    style="@style/EditTextCustomHolo" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:text="@string/continue_action"
        android:id="@id/title_action"
        android:textStyle="bold"
        android:background="@drawable/button_background_unactive"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>