<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:id="@+id/recycle"
        android:background="@drawable/recycle"/>

    <RelativeLayout
        android:background="@drawable/helper_background_last_routing"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:minHeight="100dp"
        android:id="@+id/use_last_data"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/text_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/quote_helper_last_routing" />

        <RelativeLayout
            android:layout_below="@+id/text_quota"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:layout_toLeftOf="@+id/yes_btn"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:text="@string/no_text" />

            <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/yes_text" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:id="@+id/message"
        android:layout_above="@+id/bus_pin"
        android:textColor="#fe030001"
        android:layout_marginRight="36dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:text="@string/ask_for_drag"
        android:gravity="center"
        android:background="@drawable/message"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bus_pin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/pin_glow"
        android:paddingBottom="24dp"
        android:layout_marginRight="16dp"/>

    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/continue_action"
            android:id="@id/title_action"
            android:textStyle="bold"
            android:background="@drawable/button_background_unactive"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>